--- a/CrecheApp/src/com/wesley/creche/client/desktop/Administration/StaffAdmin/UpdateStaff.form
+++ b/CrecheApp/src/com/wesley/creche/client/desktop/Administration/StaffAdmin/UpdateStaff.form
@@ -274,7 +274,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel12">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Salary"/>
+            <Property name="text" type="java.lang.String" value="Account number"/>
           </Properties>
         </Component>
       </SubComponents>
@@ -340,7 +340,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jScrollPane1" pref="545" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" pref="536" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
